--- a/Data analysis_1/test_feature_importance.ipynb
+++ b/Data analysis_1/test_feature_importance.ipynb
@@ -43,10 +43,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def mise_en_forme(data_line):\n",
     "    \n",
@@ -67,18 +65,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME_INCOME_TYPE_Maternity leave\n"
-     ]
-    }
-   ],
    "source": [
     "cols = mise_en_forme(test_id) #rajoute la ou les colonnes mqtes\n",
     "test_id = test_id[templates['0'].values] #réorganiser les colonnes comme X_train sur lequel le modele c'est entrainé"
@@ -101,16 +89,32 @@
     }
    ],
    "source": [
-    "pickle_in = open(\"pipel.pkl\",\"rb\") #notre pipeline importé\n",
+    "pickle_in = open(\"pipel_2.pkl\",\"rb\") #notre pipeline importé v2 = pipel_2, v1 = pipel\n",
     "classifier_test=pickle.load(pickle_in) #chargé dans une variable\n",
     "classifier_test.predict(test_id)#prediction"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "sléection par intex des étapes à réaliser"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def feat_imp(pipe) :\n",
+    "    val_avt_std = pipe['scaler'].transform(test_id)[0,:][pipe['rfe'].get_support()] # ct +scaler\n",
+    "    return pipe['model'].coef_* val_avt_std# feature importance\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "val_avt_std = classifier_test['scaler'].transform(test_id)[0,:][classifier_test['rfe'].get_support()]\n",
     "feat_imp = classifier_test['model'].coef_* val_avt_std# feature importance"
@@ -207,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
