--- a/Data analysis_1/test_fast_api.ipynb
+++ b/Data analysis_1/test_fast_api.ipynb
@@ -28,12 +28,13 @@
     "# 1. Library imports\n",
     "import uvicorn\n",
     "from fastapi import FastAPI\n",
+    "\n",
     "#from Credit_demands import Credit_demand_columns pas nécessaire puisque non rentré à la main\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "\n",
     "import pandas as pd\n",
+    "\n",
     "# 2. Create the app object\n",
     "app = FastAPI()\n",
     "\n",
@@ -90,24 +91,6 @@
     "\n",
     "It looks like fastapi is trying to fall back to converting the numpy array to a dict using vars as it doesn't know what to do with it. You are probably best off converting the array into a python list yourself before returning it."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for t in prediction:\n",
-    "    print(t)"
-   ]
   }
  ],
  "metadata": {
@@ -126,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
