--- a/Data analysis_1/modele_prediction.ipynb
+++ b/Data analysis_1/modele_prediction.ipynb
@@ -903,12 +903,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "pickle_out = open(\"pipel_3.pkl\",\"wb\") # avec one hot encoder scaler et rfe , prochaine version avec 0.7,0.8,0.9\n",
-    "pickle.dump(search,pickle_out)\n",
+    "pickle.dump(search.best_estimator_,pickle_out)\n",
     "pickle_out.close()"
    ]
   },
@@ -922,7 +922,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SK_ID_CURR</th>\n",
+       "      <th>NAME_CONTRACT_TYPE</th>\n",
+       "      <th>CODE_GENDER</th>\n",
+       "      <th>FLAG_OWN_CAR</th>\n",
+       "      <th>FLAG_OWN_REALTY</th>\n",
+       "      <th>CNT_CHILDREN</th>\n",
+       "      <th>AMT_INCOME_TOTAL</th>\n",
+       "      <th>AMT_CREDIT</th>\n",
+       "      <th>AMT_ANNUITY</th>\n",
+       "      <th>AMT_GOODS_PRICE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FLAG_DOCUMENT_18</th>\n",
+       "      <th>FLAG_DOCUMENT_19</th>\n",
+       "      <th>FLAG_DOCUMENT_20</th>\n",
+       "      <th>FLAG_DOCUMENT_21</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_HOUR</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_DAY</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_WEEK</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_MON</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_QRT</th>\n",
+       "      <th>AMT_REQ_CREDIT_BUREAU_YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>232927</th>\n",
+       "      <td>369780</td>\n",
+       "      <td>Cash loans</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>198666.0</td>\n",
+       "      <td>15696.0</td>\n",
+       "      <td>175500.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 71 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SK_ID_CURR NAME_CONTRACT_TYPE CODE_GENDER FLAG_OWN_CAR FLAG_OWN_REALTY  \\\n",
+       "232927     369780         Cash loans           F            N               Y   \n",
+       "\n",
+       "       CNT_CHILDREN AMT_INCOME_TOTAL AMT_CREDIT AMT_ANNUITY AMT_GOODS_PRICE  \\\n",
+       "232927            2          72000.0   198666.0     15696.0        175500.0   \n",
+       "\n",
+       "        ... FLAG_DOCUMENT_18 FLAG_DOCUMENT_19 FLAG_DOCUMENT_20  \\\n",
+       "232927  ...                0                0                0   \n",
+       "\n",
+       "       FLAG_DOCUMENT_21 AMT_REQ_CREDIT_BUREAU_HOUR AMT_REQ_CREDIT_BUREAU_DAY  \\\n",
+       "232927                0                        0.0                       0.0   \n",
+       "\n",
+       "       AMT_REQ_CREDIT_BUREAU_WEEK AMT_REQ_CREDIT_BUREAU_MON  \\\n",
+       "232927                        0.0                       0.0   \n",
+       "\n",
+       "       AMT_REQ_CREDIT_BUREAU_QRT AMT_REQ_CREDIT_BUREAU_YEAR  \n",
+       "232927                       0.0                        1.0  \n",
+       "\n",
+       "[1 rows x 71 columns]"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(X_test.iloc[0,:]).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +1041,7 @@
        "array([0], dtype=int64)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +1049,7 @@
    "source": [
     "pickle_in = open(\"pipel_3.pkl\",\"rb\") #notre pipeline importé\n",
     "classifier_test=pickle.load(pickle_in) #chargé dans une variable\n",
-    "classifier_test.predict(X_test.iloc[0,:])#X_test.loc[0,:] pd.DataFrame(X_test.iloc[0,:]).transpose()"
+    "classifier_test.predict(pd.DataFrame(X_test.iloc[0,:]).transpose())#X_test.loc[0,:] pd.DataFrame(X_test.iloc[0,:]).transpose()"
    ]
   },
   {
